--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "@stripe/stripe-react-native": "0.1.1",
     "axios": "^0.21.1",
-    "expo": "~40.0.0",
+    "expo": "^41.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-constants": "~9.3.3",
     "expo-firebase-recaptcha": "^1.4.1",
@@ -29,10 +30,11 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.2",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "11.0.0"
+    "react-native-webview": "11.0.0",
+    "sentry-expo": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
